Reformat project and fix Testcontainers not loading correctly